<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBGGray"
    android:orientation="vertical">

    <com.sxmh.wt.education.view.TitleView
        android:id="@+id/title_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/colorBGWhite"
        app:title="@string/feedback"
        app:title_color="@color/colorTextBlack" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="@dimen/base_dimen"
        android:layout_marginRight="@dimen/base_dimen"
        android:layout_marginTop="@dimen/base_dimen"
        android:background="@drawable/shape_white_shadow_back"
        android:orientation="vertical"
        android:padding="@dimen/base_dimen">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/base_dimen"
            android:text="@string/your_feedback" />

        <RadioGroup
            android:id="@+id/rg_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checkedButton="@id/rb_default"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/consult" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/big_dimen"
                android:layout_marginRight="@dimen/big_dimen"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/advise" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/other" />

        </RadioGroup>
    </LinearLayout>

    <EditText
        android:id="@+id/et_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/base_dimen"
        android:layout_marginRight="@dimen/base_dimen"
        android:gravity="top"
        android:background="@drawable/shape_white_shadow_back"
        android:hint="@string/write_your_feedback_here"
        android:lines="10"
        android:padding="@dimen/base_dimen"
        android:textSize="@dimen/s_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="@dimen/base_dimen"
        android:layout_marginRight="@dimen/base_dimen"
        android:layout_marginTop="@dimen/small_dimen"
        android:background="@drawable/shape_white_shadow_back"
        android:orientation="horizontal"
        android:padding="@dimen/base_dimen">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_or_blink"
            android:textColor="@color/colorTextBlack" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/so_that_we_can_reply"
            android:textSize="@dimen/s_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="@dimen/base_dimen"
        android:layout_marginRight="@dimen/base_dimen"
        android:background="@drawable/shape_white_shadow_back"
        android:orientation="horizontal"
        android:padding="@dimen/base_dimen">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other_or_blink"
            android:textColor="@color/colorTextBlack" />

        <EditText
            android:id="@+id/et_other_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/other_contact"
            android:textSize="@dimen/s_text_size" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="1px"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/tv_commit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorMainBlue"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/commit"
        android:textSize="@dimen/base_text_size"
        android:textColor="@color/colorTextWhite" />
</LinearLayout>