<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/base_dimen"
    android:paddingBottom="@dimen/base_dimen"
    android:background="@color/colorBGWhite"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/base_dimen"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_begin_do"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/small_dimen"
            android:drawableTop="@drawable/bottom_1"
            android:gravity="center_horizontal"
            android:text="@string/begin_do" />

        <TextView
            android:id="@+id/tv_see_analysis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/small_dimen"
            android:drawableTop="@drawable/bottom_2"
            android:gravity="center_horizontal"
            android:text="@string/see_analysis" />

        <TextView
            android:id="@+id/tv_my_collection"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/small_dimen"
            android:drawableTop="@drawable/bottom_3"
            android:gravity="center_horizontal"
            android:text="@string/my_collection" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_do_again"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/small_dimen"
            android:drawableTop="@drawable/bottom_6"
            android:gravity="center_horizontal"
            android:text="@string/do_again" />

        <TextView
            android:id="@+id/tv_my_wrongs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/small_dimen"
            android:drawableTop="@drawable/bottom_5"
            android:gravity="center_horizontal"
            android:text="@string/my_wrongs" />

        <TextView
            android:id="@+id/tv_do_continue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/small_dimen"
            android:drawableTop="@drawable/bottom_4"
            android:gravity="center_horizontal"
            android:text="@string/do_continue" />
    </LinearLayout>
</LinearLayout>